<resources>
    <string name="app_name">Todo Agenda</string>
    <string name="widget_name">Todo Agenda</string>
    <string name="widget_instance_name">Widget name</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="not_initialized_yet">Not initialized yet...</string>
    <string name="no_events_to_show">No events to show</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="open_prefs_desc">Open the settings of the calendar widget</string>
    <string name="go_to_today">Go to Today</string>
    <string name="add_event_desc">Add new calender event</string>
    <string name="add_task_desc">Add new task</string>
    <string name="indicator_alarm">Indicator if an alarm has been set</string>
    <string name="indicator_recurring">Indicator if the event is recurring</string>
    <string name="no_title">(No title)</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="grant_permissions_verbose">Widget requires permission to read calendars and tasks.\n
        Tap here to grant permissions.</string>
    <string name="past_header">Past and due</string>
    <string name="end_of_list_header">Other events</string>
    <string name="permissions_justification">Welcome to the Todo Agenda, the easy access to your calendars and tasks.\n\n
        To make the most of the widget you need to grant it access to your calendars and tasks.</string>
    <string name="no_widgets_found">Please add a \"Todo Agenda\" widget from the home screen of your device first.</string>
    <string name="select_a_widget_to_configure">Select a widget to configure</string>
    <string name="close">Close</string>
    <string name="go_to_home_screen">Go to home screen</string>
    <string name="task_icon" translatable="false">✔</string>
    <string name="loading_with_dots">Loading...</string>
    <string name="widget_header">Widget header</string>
    <string name="day_header">Day header</string>
    <string name="event_entry">Event entry</string>
    <string name="todays_events">Today\'s events</string>
    <string name="future_events">Future events</string>
    <string name="not_found">Not found</string>
    <string name="app_description_80_chars_max">Home screen widgets displaying events from selected calendars and task lists</string>
    <string name="app_description_4000_chars_max_part01">Todo Agenda is home screen widgets for your Android device.
        Each widget has its own settings and displays configured list of calendar events and tasks
        so that you can easily have a glimpse at your due, current and upcoming appointments.</string>
    <string name="app_description_4000_chars_max_part02">Features</string>
    <string name="app_description_4000_chars_max_part15">No advertising. Free and Open Source.</string>
    <string name="app_description_4000_chars_max_part03">Displays events from your calendars and task lists
        for the selected periods in the past and in the future.</string>
    <string name="app_description_4000_chars_max_part04">Automatically updates when you add/delete/modify an event.
        Or you may update the list instantly.</string>
    <string name="app_description_4000_chars_max_part05">Select only the calendars and task lists
        that you want to see in the widget.</string>
    <string name="app_description_4000_chars_max_part06">Create several widgets, if you need. Each widget has its own settings,
        including layouts, colors, filters, selected calendars and task lists.</string>
    <string name="app_description_4000_chars_max_part07">Customize background colors and transparency
        of different widget parts, black and white shading for texts.</string>
    <string name="app_description_4000_chars_max_part08">Scroll through the list of events.
        Use "Go to Today" button to return to today instantly.</string>
    <string name="app_description_4000_chars_max_part09">Customize the text size of the widget.</string>
    <string name="app_description_4000_chars_max_part10">Fully resizable widget with alternative layouts.</string>
    <string name="app_description_4000_chars_max_part11">Indicators for alerts and recurring events.</string>
    <string name="app_description_4000_chars_max_part12">Lock time zone when travelling to different time zones.</string>
    <string name="app_description_4000_chars_max_part13">Turn off Widget header, Day headers, event icons, Days from today,
        etc. and see only what you need.</string>
    <string name="app_description_4000_chars_max_part16">Hide duplicated events.</string>
    <string name="app_description_4000_chars_max_part17">Backup and restore settings,
        cloning widgets on the same or different devices.</string>
    <string name="app_description_4000_chars_max_part14">Android 7+ supported. Supports Android tablets.</string>
    <string name="compact_layout_title">Compact layout</string>
    <string name="compact_layout_off_desc">Normal space between widget parts</string>
    <string name="compact_layout_on_desc">Minimum space between widget parts, thin borders</string>
    <string name="layout_prefs_desc">Place, show and hide widget parts</string>
    <string name="layout_prefs_title">Layout</string>
    <string name="widget_header_layout">Widget header layout</string>
    <string name="pref_event_entry_layout_title">Event entry layout</string>
    <string name="default_multiline_layout">Time below title</string>
    <string name="widget_header_date_format">Widget header date format</string>
    <string name="default_value">Default</string>
    <string name="single_line_layout">All in one row</string>
    <string name="two_rows_layout">Two rows layout</string>
    <string name="hidden">Hidden</string>
    <string name="appearance_day_header_alignment_desc">Set the alignment of the day header</string>
    <string name="appearance_day_header_alignment_title">Day header alignment</string>
    <string name="appearance_day_header_alignment_left">Left</string>
    <string name="appearance_day_header_alignment_center">Center</string>
    <string name="appearance_day_header_alignment_right">Right</string>
    <string name="horizontalLineBelowDayHeader">Horizontal line below Day header</string>
    <string name="appearance_multiline_title_title">Multiline title</string>
    <string name="appearance_multiline_title_desc">Spread event title over multiple lines</string>
    <string name="appearance_show_days_without_events_title">Show days without events</string>
    <string name="appearance_show_days_without_events_desc">Show day headers for days without events</string>
    <string name="appearance_show_day_headers_title">Show day headers</string>
    <string name="appearance_show_day_headers_desc">Show day headers at all</string>
    <string name="day_header_date_format">Day header date format</string>
    <string name="show_past_events_under_one_header_title">Header for past/due events</string>
    <string name="show_past_events_under_one_header_desc">Show all past/due events under one "Past and due" header</string>
    <string name="show_event_icon_title">Show event icon</string>
    <string name="show_event_icon_desc">Show Calendar color bar / Task icon for event</string>
    <string name="entry_date_format">Entry date format</string>
    <string name="multiline_details_title">Multiline details</string>
    <string name="multiline_details_desc">Spread event time and location over multiple lines</string>
    <string name="simple_options">Simple options</string>
    <string name="date_format_default_weekday">Default with Weekday</string>
    <string name="date_format_default_ytt">Default with Yesterday, Today and Tomorrow</string>
    <string name="date_format_default_days">Default with Number of days to event</string>
    <string name="appearance_abbreviate_dates_title">Abbreviate dates with Weekday</string>
    <string name="appearance_abbreviate_dates_desc">Use three-letter format for dates</string>
    <string name="date_format_number_of_days_to_event">Number of days to event</string>
    <string name="date_format_day_in_month">Day in month</string>
    <string name="date_format_month_day">Month-Day</string>
    <string name="date_format_week_in_year">Week in year</string>
    <string name="pattern_example">Pattern example</string>
    <string name="custom_pattern">Custom pattern</string>
    <string name="sample_date">Sample date (in yyyy-MM-dd format)</string>
    <string name="result_formatted_date">Result, formatted date</string>
    <string name="N_days_ago">%d days ago</string>
    <string name="in_N_days">in %d days</string>
    <string name="different_colors_for_dark_title">Different colors for Android system Dark theme</string>
    <string name="different_colors_for_dark_off_desc">Colors are the same</string>
    <string name="different_colors_for_dark_on_desc">Switch Android system Dark theme on/off to set colors
        for Dark/Light theme correspondingly.</string>
    <string name="colors_prefs_desc">Colors and opacity of texts and backgrounds</string>
    <string name="appearance_group_color_title">Colors</string>
    <string name="colors_light">Colors for Light theme</string>
    <string name="colors_dark">Colors for Dark theme</string>
    <string name="text_color_source">How Text color is defined</string>
    <string name="text_color_source_auto">Auto text shading</string>
    <string name="text_color_source_auto_desc">Text shading (White, Light, Dark or Black) is set automatically based on background color</string>
    <string name="text_color_source_shading">Manual text shading</string>
    <string name="text_color_source_shading_desc">Text shading should be set for each part of the widget</string>
    <string name="text_color_source_color">Custom text colors</string>
    <string name="text_color_source_color_desc">Text color should be set for each part of the widget</string>
    <string name="appearance_background_color_title">Background color</string>
    <string name="appearance_background_color_desc">Adjust the color of the background</string>
    <string name="appearance_past_events_background_color_title">Past events background color</string>
    <string name="appearance_past_events_background_color_desc">Adjust background color of past events</string>
    <string name="todays_events_background_color_title">Today\'s events background color</string>
    <string name="todays_events_background_color_desc">Adjust background color of today\'s events</string>
    <string name="appearance_header_theme_title">Widget header text shading</string>
    <string name="widget_header_text_color">Widget header text color</string>
    <string name="appearance_header_theme_desc">Show the header of the widget in dark or light shade</string>
    <string name="widget_header_background_color_desc">Adjust color of the widget header. Transparent by default</string>
    <string name="widget_header_background_color_title">Widget header background color</string>
    <string name="day_header_theme_title">Day header text shading</string>
    <string name="day_header_theme_desc">Show day header text in dark or light shade</string>
    <string name="day_header_text_color">Day header text color</string>
    <string name="appearance_entries_theme_title">Event text shading</string>
    <string name="events_text_color">Event text color</string>
    <string name="appearance_entries_theme_desc">Show event text in dark or light shade</string>
    <string name="appearance_theme_black">White</string>
    <string name="appearance_theme_dark">Light</string>
    <string name="appearance_theme_light">Dark</string>
    <string name="appearance_theme_white">Black</string>
    <string name="event_details_prefs">Event details</string>
    <string name="past_events">Past events</string>
</resources>