<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

        <org.andstatus.todoagenda.prefs.MultilineCheckBoxPreference
            android:key="differentColorsForDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/different_colors_for_dark_title"
            android:summaryOn="@string/different_colors_for_dark_on_desc"
            android:summaryOff="@string/different_colors_for_dark_off_desc" />

        <ListPreference
            android:key="textColorSource"
            android:defaultValue="auto"
            android:entries="@array/pref_text_color_source_entries"
            android:entryValues="@array/pref_text_color_source_values"
            android:summary="@string/text_color_source_auto_desc"
            android:title="@string/text_color_source" />

        <PreferenceCategory app:title="@string/widget_header">
                <ListPreference
                    android:key="headerTheme"
                    android:defaultValue="DARK"
                    android:entries="@array/pref_theme_entries"
                    android:entryValues="@array/pref_theme_values"
                    android:title="@string/appearance_header_theme_title" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="widgetHeaderTextColor"
                    android:defaultValue="#9AFFFFFF"
                    android:title="@string/widget_header_text_color"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="widgetHeaderBackgroundColor"
                    android:defaultValue="#00000000"
                    android:summary="@string/widget_header_background_color_desc"
                    android:title="@string/widget_header_background_color_title"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />
        </PreferenceCategory>

        <PreferenceCategory app:title="@string/past_events" app:key="PastTime">
                <ListPreference
                    android:key="dayHeaderThemePast"
                    android:defaultValue="DARK"
                    android:entries="@array/pref_theme_entries"
                    android:entryValues="@array/pref_theme_values"
                    android:title="@string/day_header_theme_title" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="dayHeaderTextColorPast"
                    android:defaultValue="#FFCCCCCC"
                    android:title="@string/day_header_text_color"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />

                <ListPreference
                    android:key="entryThemePast"
                    android:defaultValue="BLACK"
                    android:entries="@array/pref_theme_entries"
                    android:entryValues="@array/pref_theme_values"
                    android:title="@string/appearance_entries_theme_title" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="eventTextColorPast"
                    android:defaultValue="#FFFFFFFF"
                    android:title="@string/event_text_color"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="pastEventsBackgroundColor"
                    android:defaultValue="#BF78782C"
                    android:title="@string/appearance_past_events_background_color_title"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />
        </PreferenceCategory>

        <PreferenceCategory app:title="@string/todays_events"  app:key="TodayTime">
                <ListPreference
                    android:key="dayHeaderTheme"
                    android:defaultValue="LIGHT"
                    android:entries="@array/pref_theme_entries"
                    android:entryValues="@array/pref_theme_values"
                    android:title="@string/day_header_theme_title" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="dayHeaderTextColorToday"
                    android:defaultValue="#FF777777"
                    android:title="@string/day_header_text_color"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />

                <ListPreference
                    android:key="entryTheme"
                    android:defaultValue="WHITE"
                    android:entries="@array/pref_theme_entries"
                    android:entryValues="@array/pref_theme_values"
                    android:title="@string/appearance_entries_theme_title" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="eventTextColorToday"
                    android:defaultValue="#FF000000"
                    android:title="@string/event_text_color"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="todaysEventsBackgroundColor"
                    android:defaultValue="#DAFFFFFF"
                    android:title="@string/todays_events_background_color_title"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />
        </PreferenceCategory>

        <PreferenceCategory app:title="@string/future_events" app:key="FutureTime">
                <ListPreference
                    android:key="dayHeaderThemeFuture"
                    android:defaultValue="DARK"
                    android:entries="@array/pref_theme_entries"
                    android:entryValues="@array/pref_theme_values"
                    android:title="@string/day_header_theme_title" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="dayHeaderTextColorFuture"
                    android:defaultValue="#FFCCCCCC"
                    android:title="@string/day_header_text_color"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />

                <ListPreference
                    android:key="entryThemeFuture"
                    android:defaultValue="BLACK"
                    android:entries="@array/pref_theme_entries"
                    android:entryValues="@array/pref_theme_values"
                    android:title="@string/appearance_entries_theme_title" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="eventTextColorFuture"
                    android:defaultValue="#FFFFFFFF"
                    android:title="@string/event_text_color"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />

                <com.rarepebble.colorpicker.ColorPreference
                    android:key="backgroundColor"
                    android:defaultValue="#80000000"
                    android:title="@string/appearance_background_color_title"
                    app:colorpicker_selectNoneButtonText="@string/default_value" />
        </PreferenceCategory>
</PreferenceScreen>
